# nifi-langchain

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: .bashrc  Dockerfile  devcontainer.json  docker-compose.yml
data/samples/: around-world-in-80-days.txt
data/samples/around-the-world-in-80-days-index/: index.faiss  index.pkl
examples/: Dynamic_Routing.json  Hello_LangChain.json  Retrieval_Augmented_Generation_(RAG).json
extensions/nifi-langchain-helper/: pom.xml
extensions/nifi-langchain-helper/nifi-langchain-helper-nar/: pom.xml
extensions/nifi-langchain-helper/nifi-langchain-helper-processors/: pom.xml
extensions/nifi-langchain-helper/nifi-langchain-helper-processors/src/main/java/com/apex974/nifi/processors/langchain-helper/: RunnableParallel.java  RunnableParallelMerge.java
extensions/nifi-langchain-module/: pom.xml
extensions/nifi-langchain-module/src/main/python/model/: Model.py  models.py
extensions/nifi-langchain-module/src/main/python/output-parser/: OutputParser.py  parsers.py
extensions/nifi-langchain-module/src/main/python/prompt-template/: PromptTemplate.py
extensions/nifi-langchain-module/src/main/python/retriever/: Retriever.py  embeddings.py  retrievers.py
scripts/: debug.py  deploy.sh  import.py  load-docs.py  monitor.sh  restart.sh
